add LECENSE.md & publishConfig

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@infofe-cli/core",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "infofe-cli core",
   "author": "shiwen <shiwen@4399.com>",
   "homepage": "",
   "license": "ISC",
+  "bin": {
+    "infofe-cli": "bin/index.js"
+  },
   "main": "lib/core.js",
   "directories": {
     "lib": "lib",
@@ -19,5 +22,8 @@
   "dependencies": {
     "@infofe-cli/utils": "^1.0.2"
   },
-  "gitHead": "46e52720d719c45504df03c24ab68c1c6eced633"
+  "gitHead": "da9abfa0c009eb19a329c3a38dc4245019a2dcd9",
+  "publishConfig": {
+    "access": "public"
+  }
 }
